# nlp-article-classification

./: .gitignore  README.md  pyproject.toml
models/: cbow_lr_model.joblib  skipgram_lr_model.joblib
notebooks/: article-classification.ipynb
